--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nicolas Duarte",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.0",
